Fix alignment issue

--- a/src/app/manage-files/mng-files.component.css
+++ b/src/app/manage-files/mng-files.component.css
@@ -1,11 +1,1 @@
 @import "../../animate/element-expand.css";
-
-img {
-    object-fit: contain;
-    height: 100%;
-    width: 100%;
-}
-
-.lightbox {
-  text-align: left !important; /* default value, this is for image rotation issue */
-}
